--- a/main.bib
+++ b/main.bib
@@ -5,6 +5,36 @@
 
 
 
+@article{hn85,
+abstract = {The external inductance of an axisymmetric toroidal plasma with an arbitrary aspect ratio and corss section is obtained using a Green's function method. By varying an equivalent skin current density over the plasma surface, while keeping the total toroidal current fixed, the plasma boundary is made to coincide with a magnetic surface. Numerical computations of the self-inductance and mutual inductance as fuctions of aspect raio and elongation are fitter to simple analytic formulas. The effect of distributed plasma current on the volt-seconds required to reach a prescribed net current is condsidered.},
+author = {Hirshman, S P and Neilson, G H},
+doi = {10.1063/1.865934},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Hirshman, Neilson - 1986 - External inductance of an axisymmetric plasma.pdf:pdf},
+issn = {10897666},
+journal = {Physics of Fluids},
+number = {3},
+pages = {790--793},
+title = {{External inductance of an axisymmetric plasma}},
+url = {https://doi.org/10.1063/1.865934 http://aip.scitation.org/toc/pfl/29/3},
+volume = {29},
+year = {1986}
+}
+
+
+@article{elongation,
+abstract = {In this and the accompanying paper the problem of the maximally achievable elongation in a tokamak is investigated. The work represents an extension of many earlier studies, which were often focused on determining the elongation limits due to (1) natural elongation in a simple applied pure vertical field or (2) axisymmetric stability in the presence of a perfectly conducting wall. The extension investigated here includes the effect of the vertical stability feedback system which actually sets the maximum practical elongation limit in a real experiment. A basic resistive wall stability parameter (gammatau) is introduced to model the feedback system which although simple in appearance actually captures the essence of the feedback system. Elongation limits in the presence of feedback are then determined by calculating the maximum elongation against n=0 resistive wall modes for fixed gammatau. The results are obtained by means of a general formulation culminating in a variational principle which is particularly amenable to numerical analysis. The principle is valid for arbitrary profiles but simplifies significantly for the Solov'ev profiles, effectively reducing the 2-D stability problem into a 1-D problem. The accompanying paper provides the numerical results and leads to a sharp answer of how much elongation is too much?},
+annote = {beta{\_}poloidal},
+archivePrefix = {arXiv},
+arxivId = {1508.06658},
+author = {Freidberg, Jeff P and Cerfon, Antoin and Lee, Jungpyo},
+eprint = {1508.06658},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Freidberg, Cerfon, Lee - Unknown - Tokamak elongation – how much is too much I Theory.pdf:pdf},
+journal = {arXiv.org},
+pages = {1--34},
+title = {{Tokamak elongation: how much is too much? I Theory}},
+url = {https://arxiv.org/pdf/1508.06658.pdf http://arxiv.org/abs/1508.06658},
+year = {2015}
+}
 
 
 @article{arc,
@@ -239,7 +269,39 @@ year = {2014}
 
 
 
+@article{hartmann,
+annote = {pf coil contribution},
+author = {Hartmann, Tobias and Hamacher, Thomas and {rer nat Hartmut Zohm}, Hon-Prof and {rer nat Sibylle G{\"{u}}nter}, Hon-Prof},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Hartmann et al. - Unknown - Development of a Modular Systems Code to Analyse the Implications of Physics Assumptions on the Design of a.pdf:pdf},
+mendeley-groups = {codes},
+title = {{Development of a Modular Systems Code to Analyse the Implications of Physics Assumptions on the Design of a Demonstration Fusion Power Plant}},
+url = {https://mediatum.ub.tum.de/doc/1140676/file.pdf}
+}
 
+@techreport{adx,
+author = {Labombard, B and Marmar, E and Irby, J and Rognlien, T and Umansky, M},
+file = {::},
+title = {{ADX: a high field, high power density, advanced divertor and RF tokamak Nuclear Fusion}},
+url = {https://www.osti.gov/pages/servlets/purl/1463827},
+year = {2017}
+}
+
+@article{minervini,
+abstract = {This paper attempts to bridge the gap between tokamak reactor design and plasma physics. The analysis demonstrates that the overall design of a tokamak fusion reactor is determined almost entirely by the constraints imposed by nuclear physics and fusion engineering. Virtually, no plasma physics is required to determine the main design parameters of a reactor: a, R0, B0, Ti, Te, p, n, $\tau$E, I. The one exception is the value of the toroidal current I , which depends upon a combination of engineering and plasma physics. This exception, however, ultimately has a major impact on the feasibility of an attractive tokamak reactor. The analysis shows that the engineering/nuclear physics design makes demands on the plasma physics that must be satisfied in order to generate power. These demands are substituted into the well-known operational constraints arising in tokamak physics: the Troyon limit, Greenwald limit, kink stability limit, and bootstrap fraction limit. Unfortunately, a tokamak reactor designed on the basis of standard engineering and nuclear physics constraints does not scale to a reactor. Too much current is required to achieve the necessary confinement time for ignition. The combination of achievable bootstrap current plus current drive is not sufficient to generate the current demanded by the engineering design. Several possible solutions are discussed in detail involving advances in plasma physics or engineering. The main contribution of the present work is to demonstrate that the basic reactor design and its plasma physics consequences can be determined simply and analytically. The analysis thus provides a crisp, compact, logical framework that will hopefully lead to improved physical intuition for connecting plasma physic to tokamak reactor design.},
+author = {Freidberg, J P and Mangiarotti, F J and Minervini, J},
+doi = {10.1063/1.4923266},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Freidberg, Mangiarotti, Minervini - 2015 - Designing a tokamak fusion reactor—How does plasma physics fit in.pdf:pdf},
+isbn = {0945020945},
+issn = {10897674},
+journal = {Physics of Plasmas},
+mendeley-groups = {Confinement},
+number = {7},
+pages = {070901},
+title = {{Designing a tokamak fusion reactor - How does plasma physics fit in?}},
+url = {https://doi.org/10.1063/1.4923266 http://aip.scitation.org/toc/php/22/7 http://scitation.aip.org/docserver/fulltext/aip/journal/pop/22/7/1.4923266.pdf?expires=1436899307{\&}id=id{\&}accname=guest{\&}checksum=D321347B53D2F9D7D186BF3E8E1433AC{\%}5Cnhttp://scitation.aip},
+volume = {22},
+year = {2015}
+}
 
 
 
